<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="myNanodegree">My Nanodegree Apps!</string>
    <string name="spotifyStreamer">Spotify Streamer</string>
    <string name="scoresApp">Scores App</string>
    <string name="libraryApp">Library App</string>
    <string name="buildItBigger">Build It Bigger</string>
    <string name="baconReader">Bacon Reader</string>
    <string name="capstone">Capstone: My Own App</string>
    <string name="action_settings">Settings</string>
</resources>
